--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
 
     </form>
     <h3>Page Origins</h3>
-    <p>The HTML/CSS comes from Sara Newman's Web Fundamentals class as taught at Seattle Central.  this HTML code creates a webpage with a form that allows users to input a number. Upon submitting the form, the page uses JavaScript to determine whether the input number is even or odd and displays the result below the form. The page also includes navigation, a header, footer, and description of its purpose and origin.</p>
+    <p>This page is about using HTML code creates a webpage with a form that allows users to input a number. Upon submitting the form, the page uses JavaScript to determine whether the input number is even or odd and displays the result below the form. The page also includes navigation, a header, footer, and description of its purpose and origin.</p>
     <p>The mobile navigation originates from <a href="https://www.w3schools.com/howto/howto_js_mobile_navbar.asp" target="_blank">W3Schools</a></p>
     <footer>
       <p><small>&copy; 2021-<span id="this-year"></span> by 
